--- a/includes/scss/main.scss
+++ b/includes/scss/main.scss
@@ -1,6 +1,6 @@
 /*!
-Theme Name: Starter-Theme
-Description: Webvolution Starter Theme
+Theme Name: IAmChicago
+Description: Theme For IAMCHICAGO.COM
 Author: Webvolution LLC
 Author URI: http://www.webvolutionchicago.com
 Version: 2.1
