--- a/includes/scss/_config.scss
+++ b/includes/scss/_config.scss
@@ -3,28 +3,27 @@
 config
 =============== */
 
-$max-width:				1270px;
-$font-color:			#666666;
-$link-color:            #6699cc;
+$max-width:				950px;
+$font-color:			#000000;
+$link-color:            #e93540;
 
-$primary-color:         #dbeab3; /* green */
-$secondary-color:       #cce5ff; /* blue */
-$ternary-color:         #f3dad0; /* red */
+$primary-color:         #000000; /* footer */
+$secondary-color:       #dbdbdb; /* footer offset */
 
-$font-size:				16px;
-$line-height:			20px;
-
+$font-size:				14px;
+$line-height:			18px;
+/*
 $font-size-sm:			14px;
 $line-height-sm:		20px;
 
 $font-size-md:          25px;
 $line-height-md:        20px;
-
-$font-size-lg:          32px;
+*/
+$font-size-lg:          36px;
 $line-height-lg:        38px;
 
-$font-size-xlg:         36px;
-$line-height-xlg:       38px;
+$font-size-xlg:         56px;
+$line-height-xlg:       15px;
 
-$font-stack:            'Raleway', Verdana, Geneva, sans-serif;
-$font-stack-2:          Arial, Helvetica, sans-serif;
+$font-stack:            'Playfair', 'Times New Roman', Times, serif	;
+$font-stack-2:          Helvetica, Arial, sans-serif;
