--- a/includes/scss/_mixins.scss
+++ b/includes/scss/_mixins.scss
@@ -51,6 +51,7 @@ mixins
       list-style-type: none;
       margin: 40px 0 55px 0;
       padding: 0;
+      text-align: center;
     }
 
     ul.#{$class} li {
