--- a/includes/scss/_style.scss
+++ b/includes/scss/_style.scss
@@ -58,7 +58,6 @@ body {
     max-width: $max-width;
     margin: 10px auto;
     padding-right: 10px;  /* look out */
-    @include debug5;
 
     img.logo {
       float:left;
@@ -111,28 +110,31 @@ body {
   /* main */
   main {
     max-width: $max-width;
+    width: 100%;
     margin: auto;
-
-    @include debug;
 
     /* left side */
     aside {
-      max-width: 545px;
-      width: 100%;
       margin-left: -80px;
       margin-right: 30px;
       float: left;
-      @include debug2;
+      max-width: 545px;
+      width: 100%;
+      vertical-align: top;
+
+      img {
+        max-width: 545px;
+        width: 100%;
+      }
     }
 
     /* right side */
     article {
       max-width: 445px;
       width: 100%;
-      padding-top: 40px;
+      padding-top: 10px;
       margin-right: 5px; /* look out */
       float: right;
-      @include debug1;
     }
 
     /* boxes */
@@ -187,6 +189,29 @@ body {
   }
 
   &.home .north_michigan_shops {
+    margin-top: 25px;
     max-width: 403px;
+  }
+
+  /* faqs */
+  dl.faqs {
+    dt {
+      color: $link-color;
+      margin-top: 10px;
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
+
+    dd {
+      display:none;
+      margin: 5px 0 15px 0;
+
+      a {
+        color: #000;
+        font-weight:bold;
+      }
+    }
   }
 }
