--- a/includes/scss/_config.scss
+++ b/includes/scss/_config.scss
@@ -12,18 +12,18 @@ $secondary-color:       #dbdbdb; /* footer offset */
 
 $font-size:				14px;
 $line-height:			18px;
-/*
-$font-size-sm:			14px;
-$line-height-sm:		20px;
-*/
+
 $font-size-md:          25px;
 $line-height-md:        20px;
+
+$font-size-md-2:		18px;
+$line-height-md-2:		20px;
 
 $font-size-lg:          36px;
 $line-height-lg:        38px;
 
 $font-size-xlg:         55px;
-$line-height-xlg:       15px;
+$line-height-xlg:       48px;
 
 $font-stack:            'Playfair', 'Times New Roman', Times, serif	;
 $font-stack-2:          Helvetica, Arial, sans-serif;
